# ChangeLog for net-irc/quassel
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.90 2010/07/02 07:12:50 scarabeus Exp $

  02 Jul 2010; Tomáš Chvátal <scarabeus@gentoo.org> quassel-9999.ebuild:
  Create quassel user only when required...

  01 Jul 2010; Tomáš Chvátal <scarabeus@gentoo.org> quassel-9999.ebuild,
  +files/quasselcore.conf, +files/quasselcore.init:
  Redo the live ebuild quite bit. Do not die in pkg_setup. Move confighome
  to system location.

  17 Jun 2010; Patrick Lauer <patrick@gentoo.org> quassel-0.5.1.ebuild,
  quassel-0.5.2.ebuild:
  Migrating away from deprecated postgres virtuals

  07 Jun 2010; Daniel Pielmeier <billie@gentoo.org> quassel-0.5.1.ebuild,
  quassel-0.5.2.ebuild, quassel-0.6.1.ebuild, quassel-9999.ebuild:
  Remove default USE flag for X. Fixes bug #322925.

  28 Apr 2010; Daniel Pielmeier <billie@gentoo.org>
  files/quasselcore-2.conf, files/quasselcore-2.init:
  Add support for a local postgres backend to the init script to make the
  database available when quasselcore starts up. Fixes bug #316799, thanks
  to Aaron W. Swenson for reporting.

*quassel-0.6.1 (18 Apr 2010)

  18 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -quassel-0.6.0.ebuild, +quassel-0.6.1.ebuild:
  Version bump. Drop broken.

*quassel-0.6.0 (14 Apr 2010)

  14 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -quassel-0.6_rc1.ebuild, +quassel-0.6.0.ebuild:
  Version bump. Drop rc.

  07 Apr 2010; Daniel Pielmeier <billie@gentoo.org> quassel-0.6_rc1.ebuild,
  quassel-9999.ebuild:
  Add kde-base/oxygen-icons to dependencies if kde USE flag is set.

  31 Mar 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  quassel-0.6_rc1.ebuild, quassel-9999.ebuild:
  plasma-indicatordisplay changed name to plasma-widget-message-indicator

  03 Mar 2010; Tomáš Chvátal <scarabeus@gentoo.org> quassel-9999.ebuild:
  Drop keywords from live package... Who did that?...
