@@ -13,13 +13,13 @@ DIST quassel-0.6.1.tar.bz2 2531035 RMD160 39e08319488062e02545055c91554ee1ea0259
 EBUILD quassel-0.5.1.ebuild 3218 RMD160 39c25156b7ed5c938be60b9b189d7c52a18af088 SHA1 5b9b23f3c6a99ce9494ba4c6d0ceef131c0d7d2a SHA256 d7e361d29f8ab6caf2303600e1832caab14165eda7201557ec3cc0a2e3055cdf
 EBUILD quassel-0.5.2.ebuild 3282 RMD160 2c191d65f757c83445da768cd83966c912682bc6 SHA1 00129b070abdd35dfafc8e12bcd286897b29697f SHA256 e7c9433470ad9a1a0e2b2d74f2e90dc15008fc86a484cf066ceb38f185832fba
 EBUILD quassel-0.6.1.ebuild 2901 RMD160 bffc3302e8829a4e4d3ffbe3d449f95b06cbd6d7 SHA1 7c5f1c1bb8c0bf5d1d9b2da962f1319e3ff44ec7 SHA256 ce206222ccec46dfdd8602d87a1cdfc71db626d2546863f9b2de95590013ebcd
-EBUILD quassel-9999.ebuild 3730 RMD160 a542bd768966155db2ab480be7091041e0a70715 SHA1 0b9c6f64cc125a272111870380f26c7e4dde0d93 SHA256 7860843c75c6ed05cf940143383fef1d8d9395e08bd8370d2d6e00767b3e8325
-MISC ChangeLog 15996 RMD160 05a73ee6e4ff288cb59e5c8c735cf1aa7f17f5eb SHA1 22916931ccfc79882a895a448166beb8aa5cbd30 SHA256 276033e3be8b299ec1d9f568cbe3710d9f51f28b0cfd875c86397b1baad59dee
+EBUILD quassel-9999.ebuild 3886 RMD160 c24d2df4553931a06bed3cb32bbba62f1253ca28 SHA1 ff5659b567baf93c347046fa96d2ea39d2366a03 SHA256 be40256b79a4743b0c94b1a3d060d0fd5b8d13b3a89c26fa9ea094534f51a4d0
+MISC ChangeLog 16113 RMD160 a5a98c771628b61724cdd151bb372dbe352be5f2 SHA1 a309aa9e1225dcb1b387a1432a0e0e78bfb4c32e SHA256 7c18ba1b66c8ccb2eeb50496996ecc964475586c6d3ef3b68fb471dd3aec6a18
 MISC metadata.xml 1903 RMD160 cc0c6f3ca1ade233d4640dfd913e83ee13cdbdc2 SHA1 ae3def4a7ce3f9bfc42e79d3ea851c65e0c00c21 SHA256 6188126527fca9af504832fb9a492111c35b78fa9ed422ae0fcf2bcb6478cd95
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkwtkXAACgkQHB6c3gNBRYfd3wCfTuMu+pu0JIeZfw8gxTdU0asm
-9wgAmwRsolBxmYzmoZAoaxLn3p/C2+Hs
-=nHNc
+iEYEARECAAYFAkwtk4IACgkQHB6c3gNBRYffdwCfWyBcuSOF4g/R/AoVsoIW17oU
+uCcAoJGg4Hlb3uRe4iYZLRQ1GJk9pQzf
+=tCPz
 -----END PGP SIGNATURE-----
