@@ -1,6 +1,9 @@
 # ChangeLog for net-irc/quassel
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.90 2010/07/02 07:12:50 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.91 2010/07/02 07:21:41 scarabeus Exp $
+
+  02 Jul 2010; Tomáš Chvátal <scarabeus@gentoo.org> quassel-9999.ebuild:
+  Introduce QT_MINIMAL and KDE_MINIMAL.
 
   02 Jul 2010; Tomáš Chvátal <scarabeus@gentoo.org> quassel-9999.ebuild:
   Create quassel user only when required...
